[gd_scene load_steps=16 format=3 uid="uid://bt6uanrmhqtwm"]

[ext_resource type="Script" path="res://scenes/main_map/main_multiplayer_manager.gd" id="1_4qvhw"]
[ext_resource type="TileSet" uid="uid://cc3shgi4yyt5c" path="res://main_map_tileset.tres" id="3_a1jsy"]
[ext_resource type="Script" path="res://local_map.gd" id="4_3rr6f"]
[ext_resource type="Script" path="res://object_controller.gd" id="4_ie5xf"]
[ext_resource type="Texture2D" uid="uid://dtncuabamow28" path="res://assets/5x5cross.png" id="4_vqe8m"]
[ext_resource type="Script" path="res://map_cursor.gd" id="5_ddrtc"]
[ext_resource type="PackedScene" uid="uid://dmw7ncpbymxpf" path="res://map_trash_obj.tscn" id="6_uvass"]
[ext_resource type="Script" path="res://scoring.gd" id="8_1dhj1"]
[ext_resource type="PackedScene" uid="uid://dcmikok6p8vx8" path="res://main_text.tscn" id="8_2j528"]
[ext_resource type="Script" path="res://attack_queue.gd" id="8_kf8ph"]
[ext_resource type="Script" path="res://combat_manager.gd" id="8_n664b"]
[ext_resource type="Script" path="res://combat_push_controller.gd" id="10_1jicj"]
[ext_resource type="PackedScene" uid="uid://28reccnlibjq" path="res://chat.tscn" id="14_04wrg"]
[ext_resource type="PackedScene" uid="uid://bppl1kfsjvbl2" path="res://end_screen.tscn" id="14_wkf65"]
[ext_resource type="PackedScene" uid="uid://bkjmjh0f171yy" path="res://unit_inspector.tscn" id="15_8ny8i"]

[node name="Node" type="Node"]
script = ExtResource("1_4qvhw")

[node name="map" type="TileMap" parent="."]
z_index = -3
position = Vector2(298, 266)
tile_set = ExtResource("3_a1jsy")
format = 2
layer_0/name = "main"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(131072, 65536, 65536, 1, 65536, 327680, 65537, 65536, 65536, 131073, 65536, 65536, 2, 65536, 196608, 196608, 65536, 65536, -1, 65536, 131072, 0, 65536, 524288, -131074, 65536, 131072, -65538, 65536, 131072, -2, 65536, 131072, -3, 65536, 131072, 65532, 65536, 131072, -5, 0, 131072, -4, 65536, 131072, -65539, 65536, 131072, -131075, 65536, 131072, -196611, 0, 131072, -65540, 0, 131072, -196608, 65536, 262144, -131072, 65536, 262144, -65536, 65536, 262144, -65535, 65536, 196608, -65533, 65536, 196608, -65534, 65536, 196608, -131071, 65536, 196608, -196607, 65536, 196608, -262143, 65536, 196608, -196606, 65536, 196608, -131070, 65536, 196608, -131069, 65536, 196608, 131069, 65536, 393216, 131070, 65536, 393216, 65535, 65536, 393216, 65536, 65536, 65536, 131071, 65536, 65536, 196606, 65536, 65536, 196605, 65536, 65536, 262142, 65536, 65536, 196607, 65536, 65536, 131074, 65536, 65536, 3, 65536, 196608, 65538, 65536, 327680, 65539, 65536, 327680, 327678, 0, 65536, 262144, 0, 65536, 262146, 0, 65536, -262141, 0, 196608, -131068, 0, 196608, -65531, 0, 196608, -196605, 65536, 196608, -65532, 65536, 196608, 4, 65536, 196608, 65540, 65536, 196608, 131075, 65536, 65536, 196610, 65536, 65536, 196609, 65536, 65536, 262143, 65536, 65536, 65534, 65536, 131072, 65533, 65536, 131072, 131068, 65536, 131072, -65537, 65536, 131072, -131073, 65536, 131072, -196609, 65536, 131072, 327679, 0, 262144, 327680, 0, 262144, 262145, 0, 262144, -65541, 0, 327680, -131077, 0, 327680, -131076, 0, 327680, -196604, 0, 393216, -196603, 0, 393216, -131067, 0, 393216)
layer_1/name = "highlight"
layer_1/modulate = Color(1, 1, 1, 0.513726)
layer_1/tile_data = PackedInt32Array()
layer_2/name = "cursor"
layer_2/modulate = Color(1, 1, 1, 0.227451)
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array()
layer_3/name = "atk_preview"
layer_3/modulate = Color(1, 0, 0, 0.392157)
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array()
script = ExtResource("4_3rr6f")

[node name="obj_controller" type="Node2D" parent="map" node_paths=PackedStringArray("turn_tracker")]
z_as_relative = false
script = ExtResource("4_ie5xf")
turn_tracker = NodePath("../../combat_manager/h/left/turn_tracker")

[node name="map_cursor" type="Sprite2D" parent="map" node_paths=PackedStringArray("turn_tracker", "obj_ctrl")]
z_as_relative = false
texture = ExtResource("4_vqe8m")
script = ExtResource("5_ddrtc")
turn_tracker = NodePath("../../combat_manager/h/left/turn_tracker")
obj_ctrl = NodePath("../obj_controller")

[node name="trash0" parent="map" node_paths=PackedStringArray("turntracker", "cursor") instance=ExtResource("6_uvass")]
position = Vector2(-16, 320)
turntracker = NodePath("../../combat_manager/h/left/turn_tracker")
cursor = NodePath("../map_cursor")

[node name="trash1" parent="map" node_paths=PackedStringArray("turntracker", "cursor") instance=ExtResource("6_uvass")]
turntracker = NodePath("../../combat_manager/h/left/turn_tracker")
cursor = NodePath("../map_cursor")
index = 1

[node name="trash2" parent="map" node_paths=PackedStringArray("turntracker", "cursor") instance=ExtResource("6_uvass")]
position = Vector2(80, 320)
turntracker = NodePath("../../combat_manager/h/left/turn_tracker")
cursor = NodePath("../map_cursor")
index = 2

[node name="scoring" type="TileMap" parent="map" node_paths=PackedStringArray("obj_ctrl")]
z_index = -1
z_as_relative = false
tile_set = ExtResource("3_a1jsy")
format = 2
layer_0/name = "This"
layer_0/modulate = Color(1, 1, 1, 0.588235)
layer_0/z_index = 1
layer_0/navigation_enabled = false
layer_1/name = "Next"
layer_1/modulate = Color(0, 0, 0, 0.392157)
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array()
script = ExtResource("8_1dhj1")
obj_ctrl = NodePath("../obj_controller")

[node name="combat_manager" type="MarginContainer" parent="." node_paths=PackedStringArray("map", "obj_ctrl")]
z_index = 4
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_n664b")
map = NodePath("../map")
obj_ctrl = NodePath("../map/obj_controller")

[node name="h" type="HBoxContainer" parent="combat_manager"]
layout_mode = 2

[node name="left" type="VBoxContainer" parent="combat_manager/h"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="PanelContainer" parent="combat_manager/h/left"]
layout_mode = 2
size_flags_vertical = 0

[node name="m" type="MarginContainer" parent="combat_manager/h/left/title"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="turns" type="Label" parent="combat_manager/h/left/title/m"]
layout_mode = 2
size_flags_horizontal = 0
text = "Turn Limit : 0"

[node name="points" type="Label" parent="combat_manager/h/left/title/m"]
layout_mode = 2
size_flags_horizontal = 8
text = "Points to Win: 0"
horizontal_alignment = 2

[node name="turn_tracker" parent="combat_manager/h/left" instance=ExtResource("8_2j528")]
custom_minimum_size = Vector2(576, 500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="end_screen" parent="combat_manager/h/left/turn_tracker" instance=ExtResource("14_wkf65")]
visible = false
layout_mode = 2

[node name="right" type="VBoxContainer" parent="combat_manager/h"]
layout_mode = 2
size_flags_horizontal = 8

[node name="title" type="PanelContainer" parent="combat_manager/h/right"]
layout_mode = 2
mouse_filter = 2

[node name="m" type="MarginContainer" parent="combat_manager/h/right/title"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="combat_manager/h/right/title/m"]
layout_mode = 2
size_flags_horizontal = 4
text = "Player Info"
horizontal_alignment = 1

[node name="players" type="HBoxContainer" parent="combat_manager/h/right"]
custom_minimum_size = Vector2(600, 306)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="m" type="MarginContainer" parent="combat_manager/h/right"]
layout_mode = 2
size_flags_vertical = 3

[node name="atks" type="VBoxContainer" parent="combat_manager/h/right/m"]
layout_mode = 2
size_flags_horizontal = 3

[node name="subtitle" type="PanelContainer" parent="combat_manager/h/right/m/atks"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="m" type="MarginContainer" parent="combat_manager/h/right/m/atks/subtitle"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="combat_manager/h/right/m/atks/subtitle/m"]
layout_mode = 2
text = "Remaining Attacks"
horizontal_alignment = 1

[node name="combat_queue" type="HBoxContainer" parent="combat_manager/h/right/m/atks" node_paths=PackedStringArray("map", "obj_ctrl", "turn_tracker")]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("8_kf8ph")
map = NodePath("../../../../../../map")
obj_ctrl = NodePath("../../../../../../map/obj_controller")
turn_tracker = NodePath("../../../../left/turn_tracker")

[node name="push_controller" type="Node" parent="combat_manager/h/right/m/atks/combat_queue" node_paths=PackedStringArray("map", "obj_ctrl")]
script = ExtResource("10_1jicj")
map = NodePath("../../../../../../../map")
obj_ctrl = NodePath("../../../../../../../map/obj_controller")

[node name="chat" parent="combat_manager/h/right/m" instance=ExtResource("14_04wrg")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
hide_title = true

[node name="unit_inspector" parent="combat_manager" instance=ExtResource("15_8ny8i")]
layout_mode = 2

[connection signal="combat_move_finished" from="map/obj_controller" to="." method="_on_obj_controller_combat_move_finished"]
[connection signal="move_phase_finished" from="map/obj_controller" to="." method="_on_obj_controller_move_phase_finished"]
[connection signal="out_of_units" from="map/obj_controller" to="." method="_on_obj_controller_out_of_units"]
[connection signal="hover_trash" from="map/map_cursor" to="combat_manager/unit_inspector" method="_on_map_cursor_hover_trash"]
[connection signal="new_top_hover" from="map/map_cursor" to="combat_manager/unit_inspector" method="_on_map_cursor_new_top_hover"]
[connection signal="finished" from="map/scoring" to="." method="_on_scoring_finished"]
[connection signal="give_points_to" from="map/scoring" to="." method="_on_scoring_give_points_to"]
[connection signal="attacks_complete" from="combat_manager/h/right/m/atks/combat_queue" to="combat_manager" method="_on_combat_queue_attacks_complete"]
